<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="label_bill_amount">Bill Amount</string>
    <string name="label_percent">Percent</string>
    <string name="label_tip">Tip</string>
    <string name="label_total">Total</string>
    <string name="label_split">Split Bill?</string>
    <string name="label_per">Per Person</string>
    <string name="dollar_sign">$</string>
    <string name="percent_sign">%</string>
    <string name="label_initial">$0.00</string>
    <string name="label_initial_percent">15%</string>

</resources>
