<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="itp341.caceres.nicholas.tipCalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_bill_amount"
            android:text="@string/label_bill_amount"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_percent"
            android:text="@string/label_percent"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_percent_value"
            android:layout_marginStart="43dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/label_initial_percent"
            />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar"
            android:max="30"
            android:progress="15"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_tip"
            android:text="@string/label_tip"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_tip_value"
            android:layout_marginStart="80dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/label_initial"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_total"
            android:text="@string/label_total"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_total_value"
            android:layout_marginStart="65dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/label_initial"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_split_bill"
            android:text="@string/label_split"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSplit"
            android:layout_marginStart="25dp"
            android:entries="@array/label_array_split"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_per_person"
            android:text="@string/label_per"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_per_person_tip"
            android:text="@string/label_tip"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_per_person_tip_value"
            android:layout_marginStart="15dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/label_initial"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_per_person_total"
            android:layout_marginStart="95dp"
            android:text="@string/label_total"
            android:textColor="#000000"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_per_person_total_value"
            android:layout_marginStart="15dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/label_initial"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
